[gd_scene load_steps=35 format=3 uid="uid://cb3hh412tu2cb"]

[ext_resource type="Texture2D" uid="uid://d1vy611vccntk" path="res://Character1/Idle (32x32).png" id="1_8jgqn"]
[ext_resource type="Script" path="res://Character1/P1.gd" id="1_ogyvq"]
[ext_resource type="Texture2D" uid="uid://cgp1feaaf84e8" path="res://Character1/Hit (32x32).png" id="2_8wr70"]
[ext_resource type="Texture2D" uid="uid://ds0auln1gql5d" path="res://Character1/Run (32x32).png" id="3_5m41b"]
[ext_resource type="Texture2D" uid="uid://dib4cufdqo1o7" path="res://Character1/Jump (32x32).png" id="3_ftayy"]
[ext_resource type="Texture2D" uid="uid://dt1flgxfpticd" path="res://Character1/Fall (32x32).png" id="3_yetlq"]
[ext_resource type="PackedScene" uid="uid://oae784q61afx" path="res://healthbar.tscn" id="7_gn603"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k1agv"]
atlas = ExtResource("3_5m41b")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i14qs"]
atlas = ExtResource("3_yetlq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5o12"]
atlas = ExtResource("2_8wr70")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m414j"]
atlas = ExtResource("3_5m41b")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i77uo"]
atlas = ExtResource("1_8jgqn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_51sf0"]
atlas = ExtResource("1_8jgqn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffjaa"]
atlas = ExtResource("1_8jgqn")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_igj1q"]
atlas = ExtResource("1_8jgqn")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8mc2"]
atlas = ExtResource("1_8jgqn")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgm3s"]
atlas = ExtResource("1_8jgqn")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwi72"]
atlas = ExtResource("1_8jgqn")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcdow"]
atlas = ExtResource("1_8jgqn")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3s6t"]
atlas = ExtResource("1_8jgqn")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_si1t4"]
atlas = ExtResource("1_8jgqn")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5o4ng"]
atlas = ExtResource("1_8jgqn")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw0ib"]
atlas = ExtResource("3_5m41b")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nd8ha"]
atlas = ExtResource("3_5m41b")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mi6gp"]
atlas = ExtResource("3_5m41b")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oni4f"]
atlas = ExtResource("3_5m41b")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgh8c"]
atlas = ExtResource("3_5m41b")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7r82"]
atlas = ExtResource("3_5m41b")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yiwn7"]
atlas = ExtResource("3_5m41b")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vg1cw"]
atlas = ExtResource("3_5m41b")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_trggn"]
atlas = ExtResource("3_5m41b")
region = Rect2(352, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ml013"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1agv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1agv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1agv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i14qs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i14qs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i14qs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5o12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5o12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m414j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m414j")
}],
"loop": true,
"name": &"attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i77uo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51sf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffjaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igj1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8mc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgm3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwi72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcdow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3s6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_si1t4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5o4ng")
}],
"loop": true,
"name": &"idle",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ftayy")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw0ib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nd8ha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi6gp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oni4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgh8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7r82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yiwn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vg1cw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trggn")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7pxm0"]
size = Vector2(107, 165)

[sub_resource type="CircleShape2D" id="CircleShape2D_8sn7m"]
radius = 87.023

[node name="Node2D" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("1_ogyvq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
texture_filter = 1
position = Vector2(410.875, 404)
scale = Vector2(7.19531, 7.375)
sprite_frames = SubResource("SpriteFrames_ml013")
animation = &"attack"
frame = 4
frame_progress = 0.00147716

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(418.5, 427.5)
shape = SubResource("RectangleShape2D_7pxm0")

[node name="HitboxP1" type="Area2D" parent="CharacterBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/HitboxP1"]
position = Vector2(418, 419)
shape = SubResource("CircleShape2D_8sn7m")

[node name="damage" type="Timer" parent="CharacterBody2D"]

[node name="Healthbar" parent="CharacterBody2D" instance=ExtResource("7_gn603")]
offset_left = 296.0
offset_top = 285.0
offset_right = 536.0
offset_bottom = 305.0

[connection signal="body_entered" from="CharacterBody2D/HitboxP1" to="CharacterBody2D" method="_on_hitbox_p_1_body_entered"]
[connection signal="body_exited" from="CharacterBody2D/HitboxP1" to="CharacterBody2D" method="_on_hitbox_p_1_body_exited"]
[connection signal="timeout" from="CharacterBody2D/damage" to="CharacterBody2D" method="_on_damage_timeout"]
